Issue #1956 - Account for multiple DLL files in newer CRT.
The wildcard seems to work well here for getting files included in the
final target.

--- a/old-configure.in
+++ b/old-configure.in
@@ -182,8 +182,8 @@ case "$target" in
         19*)
             _CC_SUITE=14
             MSVS_VERSION=2015
-            MSVC_C_RUNTIME_DLL=vcruntime140.dll
-            MSVC_CXX_RUNTIME_DLL=msvcp140.dll
+            MSVC_C_RUNTIME_DLL=vcruntime140*.dll
+            MSVC_CXX_RUNTIME_DLL=msvcp140*.dll
 
             MOZ_CHECK_HEADER(dia2.h, MSVC_HAS_DIA_SDK=1)
             if test -n "$MSVC_HAS_DIA_SDK"; then
