Issue #2065 - Part 1: Restore FasterMake build backend
I use this for quickly rebuilding and preprocessing the JS/XUL/CSS assets them without the need to recompile the IDL interfaces and other unnecessary items.

--- a/Makefile.in
+++ b/Makefile.in
@@ -173,6 +173,9 @@ endif
 $(addprefix install-,$(install_manifests)): install-%: $(install_manifest_depends)
 	$(addprefix $(call py_action,process_install_manifest,$(if $(NO_REMOVE),--no-remove )$*) ,$(wildcard _build_manifests/install/$(subst /,_,$*)))
 
+# Dummy wrapper rule to allow the faster backend to piggy back
+$(addprefix install-,$(subst /,_,$(filter dist/%,$(install_manifests)))): install-dist_%: install-dist/% ;
+
 .PHONY: install-tests
 install-tests: install-test-files
 
