Issue #1769: Update symbols for libxul linkage

--- a/layout/media/symbols.def.in
+++ b/layout/media/symbols.def.in
@@ -79,6 +79,22 @@ aom_codec_peek_stream_info
 aom_img_alloc
 aom_img_free
 #endif
+#ifdef MOZ_JXL
+JxlDecoderCreate
+JxlDecoderDestroy
+JxlDecoderSetParallelRunner
+JxlDecoderSubscribeEvents
+JxlDecoderProcessInput
+JxlDecoderSetInput
+JxlDecoderReleaseInput
+JxlDecoderGetBasicInfo
+JxlDecoderImageOutBufferSize
+JxlDecoderSetImageOutBuffer
+JxlThreadParallelRunner
+JxlThreadParallelRunnerCreate
+JxlThreadParallelRunnerDestroy
+JxlThreadParallelRunnerDefaultNumWorkerThreads
+#endif
 #ifdef MOZ_VORBIS
 ogg_page_bos
 ogg_page_granulepos
