PR #2050 follow-up: add symbols to build shared on Windows.

--- a/layout/media/symbols.def.in
+++ b/layout/media/symbols.def.in
@@ -90,6 +90,8 @@ JxlDecoderReleaseInput
 JxlDecoderGetBasicInfo
 JxlDecoderImageOutBufferSize
 JxlDecoderSetImageOutBuffer
+JxlDecoderGetFrameHeader
+JxlDecoderFlushImage
 JxlThreadParallelRunner
 JxlThreadParallelRunnerCreate
 JxlThreadParallelRunnerDestroy
