--- a/dom/html/test/mochitest.ini
+++ b/dom/html/test/mochitest.ini
@@ -72,6 +72,7 @@ support-files =
   file_fullscreen-rollback.html
   file_fullscreen-scrollbar.html
   file_fullscreen-selector.html
+  file_fullscreen-shadowdom.html
   file_fullscreen-svg-element.html
   file_fullscreen-top-layer.html
   file_fullscreen-unprefix-disabled-inner.html
