--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -129,6 +129,7 @@ support-files =
   file_bug1263696_frame_pass.html
   file_bug1263696_frame_fail.html
   file_bug1274806.html
+  file_bug1453693.html
   file_general_document.html
   file_htmlserializer_1.html
   file_htmlserializer_1_bodyonly.html
@@ -609,6 +610,8 @@ skip-if = toolkit == 'android'
 [test_bug1308069.html]
 [test_bug1314032.html]
 [test_bug1375050.html]
+[test_bug1453693.html]
+skip-if = os == "mac" # Different tab focus behavior on mac
 [test_caretPositionFromPoint.html]
 [test_change_policy.html]
 [test_classList.html]
@@ -648,6 +651,8 @@ skip-if = toolkit == 'android' #bug 904183
 [test_fileapi.html]
 [test_fileapi_slice.html]
 skip-if = (toolkit == 'android') # Android: Bug 775227
+[test_focus_shadow_dom_root.html]
+skip-if = os == "mac" # Different tab focus behavior on mac
 [test_getAttribute_after_createAttribute.html]
 [test_getElementById.html]
 [test_getTranslationNodes.html]
