Issue #2053 - Part 3: Update PerformanceMark to User Timing L3
There are a few minor differences between this and Mozilla's implementation:
(a) The type error messages were not hardcoded to the Performance class and were moved to Errors.msg or domerr.msg instead.
(b) Resist fingerprinting-pref changes were skipped.

Partially based on https://bugzilla.mozilla.org/show_bug.cgi?id=1724645

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -642,6 +642,12 @@ DOMInterfaces = {
     'wrapperCache': False
 },
 
+'Performance' : {
+    'implicitJSContext': [
+        'mark'
+    ],
+},
+
 'Plugin': {
     'headerFile' : 'nsPluginArray.h',
     'nativeType': 'nsPluginElement',
