--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -188,6 +188,11 @@ DOMInterfaces = {
     'nativeType': 'nsROCSSPrimitiveValue',
 },
 
+'CSSRule': {
+#    'hasXPConnectImpls': True,
+    'nativeType': 'mozilla::css::Rule'
+},
+
 'CSSStyleDeclaration': {
     'nativeType': 'nsICSSDeclaration'
 },
@@ -1672,7 +1677,6 @@ def addExternalIface(iface, nativeType=None, headerFile=None,
 
 addExternalIface('ApplicationCache', nativeType='nsIDOMOfflineResourceList')
 addExternalIface('Counter')
-addExternalIface('CSSRule')
 addExternalIface('RTCDataChannel', nativeType='nsIDOMDataChannel')
 addExternalIface('HitRegionOptions', nativeType='nsISupports')
 addExternalIface('imgINotificationObserver', nativeType='imgINotificationObserver')
