--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -189,7 +189,7 @@ DOMInterfaces = {
 },
 
 'CSSRule': {
-#    'hasXPConnectImpls': True,
+    'hasXPConnectImpls': True,
     'nativeType': 'mozilla::css::Rule'
 },
 
