--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -184,12 +184,17 @@ DOMInterfaces = {
     'wrapperCache': False
 },
 
+'CSSNamespaceRule': {
+    'nativeType': 'mozilla::css::NameSpaceRule',
+},
+
 'CSSPrimitiveValue': {
     'nativeType': 'nsROCSSPrimitiveValue',
 },
 
 'CSSRule': {
     'hasXPConnectImpls': True,
+    'concrete': False,
     'nativeType': 'mozilla::css::Rule'
 },
 
