Issue #2490 - Part 11: Convert CSSImportRule to WebIDL.
Note that the .media PutForwards is a new feature coming along for the ride, now
that we're using the spec IDL.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -180,6 +180,10 @@ DOMInterfaces = {
     'nativeType': 'nsDOMCSSDeclaration'
 },
 
+'CSSImportRule': {
+    'nativeType': 'mozilla::css::ImportRule',
+},
+
 'CSSLexer': {
     'wrapperCache': False
 },
