--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -206,6 +206,10 @@ DOMInterfaces = {
     'nativeType': 'nsICSSDeclaration'
 },
 
+'CSSStyleRule': {
+    'nativeType': 'mozilla::BindingStyleRule',
+},
+
 'CSSStyleSheet': {
     'nativeType': 'mozilla::StyleSheet',
     'binaryNames': { 'ownerRule': 'DOMOwnerRule' },
