--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -213,6 +213,11 @@ DOMInterfaces = {
     'nativeType': 'mozilla::css::NameSpaceRule',
 },
 
+'CSSPageRule': {
+    'nativeType': 'nsCSSPageRule',
+    'headerFile': 'nsCSSRules.h',
+},
+
 'CSSPrimitiveValue': {
     'nativeType': 'nsROCSSPrimitiveValue',
 },
