--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -186,6 +186,11 @@ DOMInterfaces = {
     'headerFile': 'mozilla/css/GroupRule.h',
 },
 
+'CSSFontFaceRule': {
+    'nativeType': 'nsCSSFontFaceRule',
+    'headerFile': 'nsCSSRules.h',
+},
+
 'CSSGroupingRule': {
     'concrete': False,
     'nativeType': 'mozilla::css::GroupRule',
