Issue #2490 - Part 17: Convert CSSKeyframeRule to WebIDL.

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -205,6 +205,11 @@ DOMInterfaces = {
     'nativeType': 'mozilla::css::ImportRule',
 },
 
+'CSSKeyframeRule': {
+    'nativeType': 'nsCSSKeyframeRule',
+    'headerFile': 'nsCSSRules.h',
+},
+
 'CSSLexer': {
     'wrapperCache': False
 },
