--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -210,6 +210,11 @@ DOMInterfaces = {
     'headerFile': 'nsCSSRules.h',
 },
 
+'CSSKeyframesRule': {
+    'nativeType': 'nsCSSKeyframesRule',
+    'headerFile': 'nsCSSRules.h',
+},
+
 'CSSLexer': {
     'wrapperCache': False
 },
