--- a/old-configure.in
+++ b/old-configure.in
@@ -3310,6 +3310,9 @@ case "$OS_ARCH:$CPU_ARCH" in
   WINNT:x86)
       MOZ_FFVPX=1
   ;;
+  *:x86)
+      MOZ_FFVPX=1
+  ;;
   *:x86_64)
       MOZ_FFVPX=1
   ;;
@@ -3341,6 +3344,11 @@ if test -n "$MOZ_FFVPX" -a -n "$COMPILE_ENVIRONMENT"; then
   *:x86_64)
     if $CC -E -dM -</dev/null | grep -q __ELF__; then
       FFVPX_ASFLAGS="-D__x86_64__ -DPIC -DELF"
+    fi
+  ;;
+  *:x86)
+    if $CC -E -dM -</dev/null | grep -q __ELF__; then
+      FFVPX_ASFLAGS="-DPIC -DELF"
     fi
   ;;
   *:aarch64)
